--- a/backend/config/config.env
+++ b/backend/config/config.env
@@ -1,7 +1,7 @@
-PORT = 5000
+PORT = 5001
 DB_NAME='messenger_db'
 DB_USER='root'
-DB_PASSWORD='Krishna2315'
+DB_PASSWORD='Jamaica123'
 
 SECRET_KEY = ASUTHG839203
 TOKEN_EXPIRE_DATE = 7d
