--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "server": "nodemon backend/server.js",
     "client": "npm start --prefix frontend",
-    "dev": "concurrently \" npm run server\" \" npm run client\" "
+    "start": "concurrently \" npm run server\" \" npm run client\" "
   },
   "author": "",
   "license": "ISC",
