--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "server": "nodemon backend/server.js",
     "client": "npm start --prefix frontend",
-    "start": "concurrently \" npm run server\" \" npm run client\" "
+    "start": "concurrently \" npm run server\" \" npm run client\" ",
+    "heroku-postbuild": "cd frontend && npm install && npm run client"
   },
   "author": "",
   "license": "ISC",
