--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+  
   "scripts": {
     "server": "nodemon backend/server.js",
     "client": "npm start --prefix frontend",
@@ -25,5 +26,8 @@
     "nodemon": "^2.0.22",
     "sequelize": "^6.3.5",
     "validator": "^13.9.0"
+  },
+  "engines": {
+    "node": "18.16.0"
   }
 }
