--- a/package.json
+++ b/package.json
@@ -3,12 +3,11 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
-  
   "scripts": {
     "server": "nodemon backend/server.js",
     "client": "npm start --prefix frontend",
-    "start": "concurrently \" npm run server\" \" npm run client\" ",
-    "heroku-postbuild": "cd frontend && npm install && npm run client"
+    "start": "npm run server",
+    "heroku-postbuild": "cd frontend && npm install && npm run build"
   },
   "author": "",
   "license": "ISC",
@@ -21,6 +20,7 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "formidable": "^3.5.0",
+    "heroku": "^8.1.9",
     "jsonwebtoken": "^9.0.0",
     "mysql2": "^3.4.3",
     "nodemon": "^2.0.22",
