--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "server": "nodemon backend/server.js",
     "client": "npm start --prefix frontend",
     "start": "npm run server",
-    "heroku-postbuild": "cd frontend && npm install && npm run build"
+    "heroku-postbuild": "cd frontend && npm install && npm run start"
   },
   "author": "",
   "license": "ISC",
