--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,5 +16,6 @@
     "jwt-decode": "^3.1.2",
     "socket.io": "^4.7.1",
     "socket.io-client": "^4.7.1"
-  }
+  },
+  "proxy": "http://localhost:5001"
 }
