--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "server": "nodemon backend/server.js",
     "client": "npm start --prefix frontend",
-    "start": "npm run server",
+    "start": "node backend/server.js",
     "heroku-postbuild": "cd frontend && npm install && npm run start"
   },
   "author": "",
