--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
   "scripts": {
     "server": "nodemon backend/server.js",
     "client": "npm start --prefix frontend",
-    "start": "node backend/server.js",
-    "heroku-postbuild": "cd frontend && npm install && npm run start"
+    "start": "node server",
+    "heroku-postbuild": "cd frontend && npm install --prefix client && npm run build --prefix client"
   },
   "author": "",
   "license": "ISC",
