--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "server": "nodemon backend/server.js",
     "client": "npm start --prefix frontend",
     "start": "node server",
-    "heroku-postbuild": "cd frontend && npm install --prefix client && npm run build --prefix client"
+    "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false && cd frontend && npm install --prefix client && npm run build --prefix client"
   },
   "author": "",
   "license": "ISC",
