--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "server": "nodemon backend/server.js",
     "client": "npm start --prefix frontend",
     "start": "node backend/server.js",
-    "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false && npm install && npm run start && npm run client"
+    "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install && npm run start && npm run client"
   },
   "author": "",
   "license": "ISC",
