--- a/package.json
+++ b/package.json
@@ -6,9 +6,9 @@
   "scripts": {
     "server": "nodemon backend/server.js",
     "client": "npm start --prefix frontend",
-    "start": "node backend/server.js",
+    "start": "concurrently \" npm run server\" \" npm run client\" ",
     "dev": "concurrently \" npm run server\" \" npm run client\" ",
-    "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false && concurrently \" npm run start\" \" npm run client\" "
+    "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false"
   },
   "author": "",
   "license": "ISC",
