--- a/backend/config/config.env
+++ b/backend/config/config.env
@@ -2,7 +2,7 @@ PORT = 5001
 DB_NAME='messenger_db'
 DB_USER='root'
 DB_PASSWORD='Jamaica123'
-
+JAWSDB_URL=mysql://dp4eahjcpvt74yzj:vi32tm6cy2hft87y@wb39lt71kvkgdmw0.cbetxkdyhwsb.us-east-1.rds.amazonaws.com:3306/j7t8bhev5z19f6xd
 SECRET_KEY = ASUTHG839203
 TOKEN_EXPIRE_DATE = 7d
 COOKIE_EXPIRE_DATE = 7
