--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "server": "nodemon backend/server.js",
     "client": "npm start --prefix frontend",
-    "start": "concurrently \" npm run server\" \" npm run client\" ",
+    "start": " npm run server ",
     "dev": "concurrently \" npm run server\" \" npm run client\" ",
     "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false"
   },
