--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "client": "npm start --prefix frontend",
     "start": " npm run server ",
     "dev": "concurrently \" npm run server\" \" npm run client\" ",
-    "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false"
+    "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false && npm run client"
   },
   "author": "",
   "license": "ISC",
